--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <main>
       <header>
-          <h1>Título do Site</h1>
+          <h1>Cursos Grátis</h1>
       </header>
       <article>
-          <h2>Artigo 001</h2>
-          <p>Texto Artigo 001</p>
+          <h2>Curso De HTML5 com CSS3</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, maxime aperiam ab officiis blanditiis amet illum veniam nulla modi, laborum natus! Fugit exercitationem earum nam, consequatur illum in aperiam quibusdam.</p>
       </article>
       <article>
-          <h2>Artigo 002</h2>
-          <p>Texto Artigo 002</p>
+          <h2>Curso de Javascript</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio tempora vero itaque doloribus quod dolorem nobis unde rerum esse, consequuntur totam commodi repellat cupiditate error laudantium ipsa eum ut deserunt.</p>
       </article>
   </main>  
 </body>
