--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
   <main>
       <header>
           <h1>Cursos Grátis</h1>
+          <img src="images/curso-em-video-cor.png" alt="Curso em Video">
       </header>
       <article>
           <h2>Curso De HTML5 com CSS3</h2>
+          <img class="lado" src="images/curso-html-css.png" alt="Curso Html">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, maxime aperiam ab officiis blanditiis amet illum veniam nulla modi, laborum natus! Fugit exercitationem earum nam, consequatur illum in aperiam quibusdam.</p>
+          <p>Acesse o curso de HTML5</p>
       </article>
       <article>
           <h2>Curso de Javascript</h2>
+          <img class="lado" src="images/curso-javascript.png" alt="Curso JS">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio tempora vero itaque doloribus quod dolorem nobis unde rerum esse, consequuntur totam commodi repellat cupiditate error laudantium ipsa eum ut deserunt.</p>
-      </article>
+          <p>Acesse o Curso de JavaScript</p>
+     </article>
   </main>  
 </body>
 </html>
